# frank

01_processes/: meson.build
01_processes/src/: aba.cpp  charout.cpp
02_threads/: meson.build
02_threads/src/: contest.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: loadsim.cpp  main.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h  semaphor.h  utils.h  work_packet.h
05_sync3/src/: dining.cpp  philosopher.cpp  semaphor.cpp
06_future/: meson.build
06_future/src/: factoring.cpp
07_berkeley/: meson.build  meson_options.txt
07_berkeley/include/: clock.h  pipe.h  timeutils.h
07_berkeley/src/: clock.cpp  main.cpp
frank_project_1/src/: main.cpp
