project('02_threads', 'cpp',
        license : ['Boost'],
        version : '0.1',
        default_options : ['warning_level=3', 'werror=true'])

 thread_dep = dependency('threads')



src = ['src/contest.cpp']

executable('XXX',
            sources : src,     
            dependencies : thread_dep,
           )



